alignment-fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -192,8 +192,8 @@ nav{
     align-items: center;
     background-color: #FFFFFF;
     border-radius: 5px;
-    margin-bottom: 45px;
-    box-shadow: 0px 0px 40px rgba(0,0,0,0.15);
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 40px rgba(0,0,0,0.35);
 }
 
 .product-details{
@@ -457,6 +457,11 @@ footer p{
      gap: 20px;
   }
   .banner .banner-right img{
-      max-width: 300px;
+      max-width:70%;
+  }
+  .title {
+      width: 60%;
+      margin: auto;
+      font-size: 17px;
   }
 }
